--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    background-color: red;
+    background-color: #F15A59;
     width: 100vw;
   }
   
